<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E3D49"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kareem.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="My Nanodegree Apps"
            android:textSize="24dp" />

        <Button
            android:id="@+id/MainActivity_popularMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="#ff9335"
            android:paddingBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingTop="8dp"
            android:text="@string/popular_movies" />

        <Button
            android:id="@+id/MainActivity_stockHawk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="#ff9335"
            android:paddingBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingTop="8dp"
            android:text="@string/stock_hawk" />

        <Button
            android:id="@+id/MainActivity_buildItBigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="#ff9335"
            android:paddingBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingTop="8dp"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/MainActivity_makeYourAppMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="#ff9335"
            android:paddingBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingTop="8dp"
            android:text="@string/make_your_app_material" />

        <Button
            android:id="@+id/MainActivity_goUbiquitous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="#ff9335"
            android:paddingBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingTop="8dp"
            android:text="@string/go_ubiquitous" />

        <Button
            android:id="@+id/MainActivity_capstoneMyOwnApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="#ff5500"
            android:paddingBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingTop="8dp"
            android:text="@string/capstone_myownapp" />

    </LinearLayout>

</RelativeLayout>
